trying to fix the overflow issue

--- a/admin/src/components/RegisterTeamMember.css
+++ b/admin/src/components/RegisterTeamMember.css
@@ -8,7 +8,7 @@
 html, body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f6f9;
-  margin: 60px;
+  margin: 0;
   height: 100%;
   overflow-y: auto;
 }
